# multi-agent-ai-system

./: .env.example  .gitignore  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  README_NEW.md  TESTING_CHECKLIST.md  WEB_SCRAPER_ENHANCEMENT.md  WEB_UI_TESTING.md  pyproject.toml  requirements.txt  setup.bat  setup.ps1  setup.sh  start_agents.py  test_enhanced_system.py  test_web_ui.py  validate_setup.py  validate_setup_simple.py
base-ai-agent/: __init__.py  agent.py  agent_complex.py  config.py  run.py  search_tool.py  simple_agent.py
google-search-agent/: __init__.py  a2a_server.py  agent.json  agent.py  config.py  run.py  search_agent_executor.py
mcp-tools/: __init__.py  filesystem_server.py
shared/: __init__.py  mcp_utils.py  memory_manager.py  ollama_config.py  utils.py
web-scraper-agent/: a2a_server.py  agent.py  scraper_agent_executor.py
